--- a/Examples/Sample/CollectionView Example/CollectionView-Example.storyboard
+++ b/Examples/Sample/CollectionView Example/CollectionView-Example.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14F6a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="aUd-o0-OKC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="aUd-o0-OKC">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Delegate-->
         <scene sceneID="kAl-rh-SSU">
             <objects>
                 <viewController id="6lh-Md-jCk" customClass="CollectionViewController" sceneMemberID="viewController">
@@ -17,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="t6c-oA-kzk">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="526"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewLayout key="collectionViewLayout" id="g1k-dW-42f" customClass="CollectionViewLayout"/>
                                 <cells/>
@@ -29,6 +30,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZc-li-rog" customClass="DZNSegmentedControl">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="hoU-Gy-jKA"/>
+                                </constraints>
                                 <connections>
                                     <action selector="didChangeSegment:" destination="6lh-Md-jCk" eventType="valueChanged" id="kbp-DM-CyC"/>
                                     <outlet property="delegate" destination="6lh-Md-jCk" id="DRH-M4-Htz"/>
@@ -37,14 +41,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="t6c-oA-kzk" firstAttribute="leading" secondItem="Vsl-Bc-VpI" secondAttribute="leading" id="5O6-v6-xla"/>
-                            <constraint firstItem="XZc-li-rog" firstAttribute="top" secondItem="hKn-en-jrH" secondAttribute="bottom" constant="460" id="7gV-fr-DWN"/>
-                            <constraint firstItem="NiP-Ou-LQO" firstAttribute="top" secondItem="t6c-oA-kzk" secondAttribute="bottom" constant="42" id="NqD-xQ-Drp"/>
-                            <constraint firstItem="t6c-oA-kzk" firstAttribute="top" secondItem="Vsl-Bc-VpI" secondAttribute="top" id="PgC-De-Q1m"/>
-                            <constraint firstItem="t6c-oA-kzk" firstAttribute="leading" secondItem="XZc-li-rog" secondAttribute="leading" id="Q0t-6q-IUL"/>
-                            <constraint firstItem="XZc-li-rog" firstAttribute="trailing" secondItem="t6c-oA-kzk" secondAttribute="trailing" id="c92-BM-MOH"/>
-                            <constraint firstItem="XZc-li-rog" firstAttribute="bottom" secondItem="NiP-Ou-LQO" secondAttribute="top" id="ifv-my-CjC"/>
-                            <constraint firstAttribute="trailing" secondItem="XZc-li-rog" secondAttribute="trailing" id="vfi-1k-Geg"/>
+                            <constraint firstItem="t6c-oA-kzk" firstAttribute="leading" secondItem="Vsl-Bc-VpI" secondAttribute="leading" id="2RZ-L1-pc5"/>
+                            <constraint firstItem="t6c-oA-kzk" firstAttribute="leading" secondItem="XZc-li-rog" secondAttribute="leading" id="9Hw-bz-9kU"/>
+                            <constraint firstItem="NiP-Ou-LQO" firstAttribute="top" secondItem="XZc-li-rog" secondAttribute="bottom" id="J6u-DW-FFU"/>
+                            <constraint firstAttribute="trailing" secondItem="XZc-li-rog" secondAttribute="trailing" id="LGP-cu-0fC"/>
+                            <constraint firstItem="t6c-oA-kzk" firstAttribute="top" secondItem="Vsl-Bc-VpI" secondAttribute="top" id="UrX-BL-udQ"/>
+                            <constraint firstItem="NiP-Ou-LQO" firstAttribute="top" secondItem="t6c-oA-kzk" secondAttribute="bottom" constant="44" id="Yhr-tb-Lgm"/>
+                            <constraint firstItem="t6c-oA-kzk" firstAttribute="trailing" secondItem="XZc-li-rog" secondAttribute="trailing" id="dZA-bH-SWU"/>
+                            <constraint firstItem="XZc-li-rog" firstAttribute="top" relation="greaterThanOrEqual" secondItem="hKn-en-jrH" secondAttribute="bottom" id="lQC-Kg-WV8"/>
+                            <constraint firstItem="XZc-li-rog" firstAttribute="bottom" secondItem="NiP-Ou-LQO" secondAttribute="top" id="qj8-Lc-G58"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="mRP-73-doE"/>
@@ -76,9 +81,4 @@
             <point key="canvasLocation" x="989" y="454"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
